Tudo lindo e organizado com singleton